[gd_scene load_steps=7 format=3 uid="uid://c8q5v0j6y5n3q"]

[ext_resource type="Script" uid="uid://b2hggttpwd2p3" path="res://src/ui/screens/car_select_screen.gd" id="1_car"]
[ext_resource type="PackedScene" uid="uid://clk13i3hwoyi3" path="res://src/ui/screens/bogatie/bogatie.tscn" id="2_whh1c"]
[ext_resource type="Theme" uid="uid://cm6paiulktuae" path="res://src/ui/theme/base.tres" id="3_w5hit"]

[sub_resource type="Gradient" id="Gradient_whh1c"]
offsets = PackedFloat32Array(0, 0.426426, 1)
colors = PackedColorArray(0.333333, 0.72549, 0.639216, 1, 0.30045, 0.553675, 0.518461, 1, 0.305882, 0.65098, 0.603922, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_w5hit"]
fractal_lacunarity = 4.365
fractal_gain = 0.48
domain_warp_fractal_lacunarity = 7.525

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_w5hit"]
color_ramp = SubResource("Gradient_whh1c")
noise = SubResource("FastNoiseLite_w5hit")

[node name="CarSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_car")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -594.0
offset_top = -61.0
offset_right = 1714.0
offset_bottom = 2994.0
texture = SubResource("NoiseTexture2D_w5hit")
metadata/_edit_lock_ = true

[node name="Bogatie" parent="." instance=ExtResource("2_whh1c")]
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Select Your Car"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TotalCoins" type="Label" parent="VBoxContainer/HBoxContainer/CenterContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Total Coins: Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CarGrid" type="GridContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/v_separation = 20
columns = 4

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/CenterContainer3"]
layout_mode = 2
theme = ExtResource("3_w5hit")
theme_override_font_sizes/font_size = 40
text = "Back"
